--- a/styles.css
+++ b/styles.css
@@ -121,3 +121,35 @@ body {
 .product-image:hover {
     transform: scale(2.5);
 }
+body {
+    background-color: black;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+  }
+  
+  .landing-container {
+    position: relative;
+  }
+  
+  .center-gif {
+    width: 200px;
+    height: auto;
+  }
+  
+  .enter-site-btn {
+    position: absolute;
+    color: white;
+    font-family: 'Philosopher', sans-serif;
+    font-weight: 700;
+    font-style: italic;
+    text-decoration: none;
+    top: 38%;
+    left: 67%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+  }
+  
