--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ body {
     padding: 30px;
     border-radius: 8px;
     z-index: 1;
+    text-align: center;
 }
 
 .product-title {
@@ -81,13 +82,12 @@ body {
     transition: background-color 0.5s;
 }
 
-   
 @media screen and (max-width: 768px) {
     .logo {
         max-width: 100px;
     }
 
-    .product-area {
+    .product-container {
         padding: 20px;
         max-width: 90%;
     }
@@ -104,16 +104,8 @@ body {
         max-width: 100%;
         margin-bottom: 20px;
     }
-
-    .product-details {
-        font-size: 1.2rem;
-    }
-
-    .purchase-button {
-        font-size: 1rem;
-        padding: 6px 12px;
-    }
 }
+
 .product-image {
     transition: transform 0.3s ease;
 }
@@ -121,6 +113,8 @@ body {
 .product-image:hover {
     transform: scale(2.5);
 }
+
+/* Index.html styles */
 body {
     background-color: black;
     margin: 0;
@@ -129,18 +123,18 @@ body {
     justify-content: center;
     height: 100vh;
     overflow: hidden;
-  }
-  
-  .landing-container {
+}
+
+.landing-container {
     position: relative;
-  }
-  
-  .center-gif {
+}
+
+.center-gif {
     width: 200px;
     height: auto;
-  }
-  
-  .enter-site-btn {
+}
+
+.enter-site-btn {
     position: absolute;
     color: white;
     font-family: 'Philosopher', sans-serif;
@@ -151,5 +145,34 @@ body {
     left: 67%;
     transform: translate(-50%, -50%);
     cursor: pointer;
-  }
-  
+}
+
+.purchase-button-container {
+    position: relative;
+    display: inline-block;
+}
+
+.sellfy-buy-button.purchase-button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
+    padding: 25px 30px;
+    border: none;
+    border-radius: 4px;
+    text-align: center;
+    cursor: pointer;
+    background-color: red;
+    color: white;
+    text-decoration: none;
+    transition: background-color 0.5s;
+}
+
+.sellfy-buy-button.purchase-button:hover {
+    background-color: darkred;
+}
+.sellfy-buy-button.purchase-button span {
+    display: inline-block;
+    position: relative;
+    z-index: 2;
+}
