adjust landing text

--- a/styles.css
+++ b/styles.css
@@ -144,12 +144,20 @@ body {
         max-width: 100%;
         margin-bottom: 20px;
     }
-
-    .enter-site-btn {
-        top: 45%;
-        left: 50%;
-    }
 }
 .product-image.enlarged {
     transform: scale(2.5);
 }
+.enter-site-btn {
+    position: absolute;
+    color: white;
+    font-family: 'Philosopher', sans-serif;
+    font-weight: 700;
+    font-style: italic;
+    text-decoration: none;
+    top: 46%;
+    left: 52%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+}
+
