--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,8 @@ body {
     .product-image {
         max-width: 100%;
         margin-bottom: 20px;
+        padding: 10px; /* Add this line */
+        box-sizing: border-box; /* Add this line */
     }
 
     .enter-site-btn {
@@ -187,10 +189,12 @@ body {
     .product-image {
         max-width: 150px;
         margin-bottom: 10px;
+        padding: 10px; /* Add this line */
+        box-sizing: border-box; /* Add this line */
     }
 
     .product-price {
-        font-size: 1.2rem;
+        font-size: 0.7rem;
         margin-bottom: 10px;
     }
 
